--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amethyst-Inguz</title>
+  </head>
+  <body>
+    <style media="screen">
+      body {
+        background-color: #726E97;
+        color: white;
+      }
+      a {
+        color: #83B5D1;
+      }
+      p {
+        padding: 19% 37%;
+      }
+    </style>
+      <p>Contact us @ <a href="mailto:amethyst.inguz@gmail.com">amethyst.inguz@gmail.com</a></p>
+  </body>
+</html>
