--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
         color: white;
       }
       a {
-        color: #83B5D1;
+        color: black;
       }
-      p {
-        padding: 19% 37%;
+      p{
+        margin: 1% 15%;
+        text-align: center;
       }
+      img {
+        margin: 15% 39%;
+        height: 100px;
+      }
+
     </style>
-      <p>Contact us @ <a href="mailto:amethyst.inguz@gmail.com">amethyst.inguz@gmail.com</a></p>
+
+   <a href='https://play.google.com/store/apps/details?id=com.amethyst.controll_er&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank"><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+      <p>Contact us @ <a href="mailto:amethyst.inguz@gmail.com">amethyst.inguz@gmail</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
   </body>
 </html>
