--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="UPpdza8kAVttb2uZZXSmfwHz6oyXWz6LRS7hI-6ThWQ" />
     <title>Amethyst-Inguz</title>
   </head>
   <body>
