--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </style>
 
    <a href='https://play.google.com/store/apps/details?id=com.amethyst.controll_er&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank"><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
-      <p>Contact us @ <a href="mailto:amethyst.inguz@gmail.com">amethyst.inguz@gmail</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+      <p>Contact us at <a href="mailto:amethyst.inguz@gmail.com">amethyst.inguz@gmail</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
   </body>
 </html>
